--- a/qtcassist/qtcassist-base/src/main/resources/application.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application.properties
@@ -35,3 +35,4 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 
 mybatis.mapper-locations=classpath:mapping/*.xml
 mybatis.type-aliases-package=com.ucar.qtcassist.dao
+mybatis.config-locations=classpath:Mybatis-config.xml
