--- a/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
@@ -12,3 +12,6 @@ spring.redis.pool.max-wait=-1
 spring.redis.pool.max-idle=500
 spring.redis.pool.min-idle=0
 spring.redis.timeout=0
+
+#²ÊÉ«ÈÕÖ¾
+spring.output.ansi.enabled=ALWAYS
