--- a/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.datasource.name=dev
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/college
+spring.datasource.url=jdbc:mysql://10.104.102.225/qtccloud
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=admin@123
 
 spring.redis.host=10.104.10.14
 spring.redis.port=6379
