使用公司的文件服务

--- a/qtcassist/pom.xml
+++ b/qtcassist/pom.xml
@@ -130,6 +130,10 @@
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-log4j12</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.caucho</groupId>
+                    <artifactId>hessian</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
