--- a/qtcassist/qtcassist-base/pom.xml
+++ b/qtcassist/qtcassist-base/pom.xml
@@ -16,7 +16,29 @@
     </parent>
 
     <dependencies>
+        <dependency>
+            <groupId>com.zuche.framework</groupId>
+            <artifactId>base-integrate-remote</artifactId>
+            <version>4.1.200-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
+        <dependency>
+            <groupId>com.zuche.framework</groupId>
+            <artifactId>base-business-common</artifactId>
+            <version>4.1.200-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.caucho</groupId>
+            <artifactId>hessian</artifactId>
+            <version>4.0.7</version>
+        </dependency>
     </dependencies>
 
     <build>
