--- a/qtcadmin/qtcadmin-view/package.json
+++ b/qtcadmin/qtcadmin-view/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@ucar/ucar-vue": "^1.3.5",
     "axios": "^0.16.2",
     "echarts": "^3.7.1",
     "element-ui": "^2.0.7",
