--- a/qtcadmin/qtcadmin-web/src/main/resources/application.yml
+++ b/qtcadmin/qtcadmin-web/src/main/resources/application.yml
@@ -2,6 +2,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8001/eureka/
+#    fetch-registry: false
+#    register-with-eureka: false
 security:
   basic:
     enabled: false
