--- a/qtcassist/qtcassist-base/pom.xml
+++ b/qtcassist/qtcassist-base/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>hessian</artifactId>
             <version>4.0.7</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.artofsolving</groupId>
+            <artifactId>jodconverter</artifactId>
+            <version>2.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
