--- a/qtcassist/qtcassist-base/src/main/resources/application.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test1
+
 
 server.port=8762
 spring.application.name=qtcassist
@@ -36,3 +36,11 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 mybatis.mapper-locations=classpath:mapping/*.xml
 mybatis.type-aliases-package=com.ucar.qtcassist.dao
 mybatis.config-locations=classpath:Mybatis-config.xml
+
+# 配置中心服务的地址
+spring.cloud.config.uri=localhost:8888
+# 要读取的配置文件application属性
+spring.cloud.config.name=qtcassist
+# 要读取的配置文件profile属性,默认是dev
+spring.cloud.config.profile=dev
+
