更改包路径

--- a/qtcassist/qtcassist-base/src/main/resources/application-test1.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application-test1.properties
@@ -14,4 +14,4 @@ spring.redis.pool.min-idle=0
 spring.redis.timeout=0
 
 #²ÊÉ«ÈÕÖ¾
-spring.output.ansi.enabled=ALWAYS
+spring.output.ansi.enabled=never
