--- a/qtcassist/qtcassist-schedule/pom.xml
+++ b/qtcassist/qtcassist-schedule/pom.xml
@@ -38,6 +38,22 @@
         <finalName>qtcassist</finalName>
         <plugins>
             <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.5.14.RELEASE</version>
+                <configuration>
+                    <mainClass>com.ucar.qtcassist.QtcassistApplication</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <executions>
