修改pom文件，添加远程访问

--- a/qtchome/qtchome-web/src/main/resources/application.yml
+++ b/qtchome/qtchome-web/src/main/resources/application.yml
@@ -1,18 +1,14 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8001/eureka/
+      defaultZone: http://qtc:123456@localhost:8001/eureka/
 security:
   basic:
     enabled: false
 server:
   port: 8006
-spring:
-  application:
-    name: api-home
-  datasource:
-    url: jdbc:mysql://127.0.0.1:3306/qtccloud?useUnicode=true&characterEncoding=utf8
-    username: root
-    password: 123456
 logging:
   level: debug
+spring:
+  application:
+    name: front-end-service
