--- a/qtchome/qtchome-web/src/main/resources/application.yml
+++ b/qtchome/qtchome-web/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://qtc:123456@localhost:8001/eureka/
+      defaultZone: http://localhost:8001/eureka/
 security:
   basic:
     enabled: false
