--- a/qtcadmin/qtcadmin-view/package.json
+++ b/qtcadmin/qtcadmin-view/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "clouddo-view",
+  "name": "qtcadmin-view",
   "version": "1.2.0",
   "description": "A Vue.js project for admin",
-  "author": "junya.meng@baozun.com",
+  "author": "ucarinc.com",
   "private": true,
   "scripts": {
     "server": "node server/bin/www",
@@ -10,7 +10,6 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "@ucar/ucar-vue": "^1.3.5",
     "axios": "^0.16.2",
     "echarts": "^3.7.1",
     "element-ui": "^2.0.7",
