mq设置增加开关

--- a/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
@@ -16,5 +16,7 @@ spring.redis.timeout=0
 prism.url=http://prismtest.10101111.com/prism
 zkserver.url=10.104.107.222:5181
 
+metaq.consumer.start-up=false
+
 #²ÊÉ«ÈÕÖ¾
 spring.output.ansi.enabled=ALWAYS
