--- a/qtcassist/qtcassist-base/src/main/resources/application-test1.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application-test1.properties
@@ -13,5 +13,7 @@ spring.redis.pool.max-idle=500
 spring.redis.pool.min-idle=0
 spring.redis.timeout=0
 
+metaq.consumer.start-up=false
+
 #²ÊÉ«ÈÕÖ¾
 spring.output.ansi.enabled=detect
