--- a/qtcassist/qtcassist-base/src/main/resources/application.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application.properties
@@ -8,39 +8,39 @@ eureka.client.service-url.defaultZone=http://localhost:8001/eureka/
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
-# 下面为连接池的补充设置，应用到上面所有数据源中
-# 初始化大小，最小，最大
+# \uFFFD\uFFFD\uFFFD\uFFFD\u03AA\uFFFD\uFFFD\uFFFD\u04F3\u0635\u0132\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u00E3\uFFFD\u04E6\uFFFD\u00F5\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0534\uFFFD\uFFFD
+# \uFFFD\uFFFD\u02BC\uFFFD\uFFFD\uFFFD\uFFFD\u0421\uFFFD\uFFFD\uFFFD\uFFFD\u0421\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
 spring.datasource.maxActive=20
-# 配置获取连接等待超时的时间
+# \uFFFD\uFFFD\uFFFD\u00FB\uFFFD\u0221\uFFFD\uFFFD\uFFFD\u04F5\u0234\uFFFD\uFFFD\uFFFD\u02B1\uFFFD\uFFFD\u02B1\uFFFD\uFFFD
 spring.datasource.maxWait=60000
-# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+# \uFFFD\uFFFD\uFFFD\u00FC\uFFFD\uFFFD\uFFFD\uFFFD\u00F2\u017D\uFFFD\uFFFD\uFFFD\u04BB\uFFFD\u03BC\uFFFD\u28EC\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u04AA\uFFFD\u0631\u0575\u013F\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u04E3\uFFFD\uFFFD\uFFFD\u03BB\uFFFD\u01FA\uFFFD\uFFFD\uFFFD
 spring.datasource.timeBetweenEvictionRunsMillis=60000
-# 配置一个连接在池中最小生存的时间，单位是毫秒
+# \uFFFD\uFFFD\uFFFD\uFFFD\u04BB\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u06B3\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0421\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u02B1\uFFFD\u48EC\uFFFD\uFFFD\u03BB\uFFFD\u01FA\uFFFD\uFFFD\uFFFD
 spring.datasource.minEvictableIdleTimeMillis=300000
 spring.datasource.validationQuery=SELECT 1 FROM DUAL
 spring.datasource.testWhileIdle=true
 spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
-# 打开PSCache，并且指定每个连接上PSCache的大小
+# \uFFFD\uFFFDPSCache\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u05B8\uFFFD\uFFFD\u00FF\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFDPSCache\uFFFD\u0134\uFFFD\u0421
 spring.datasource.poolPreparedStatements=true
 spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
-# 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+# \uFFFD\uFFFD\uFFFD\u00FC\uFFFD\uFFFD\u0373\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0635\uFFFDfilters\uFFFD\uFFFD\u0225\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u063D\uFFFD\uFFFD\uFFFDsql\uFFFD\u07B7\uFFFD\u0373\uFFFD\u01A3\uFFFD'wall'\uFFFD\uFFFD\uFFFD\u06B7\uFFFD\uFFFD\uFFFD\u01FD
 spring.datasource.filters=stat,wall,logback
-# 通过connectProperties属性来打开mergeSql功能；慢SQL记录
+# \u0368\uFFFD\uFFFDconnectProperties\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFDmergeSql\uFFFD\uFFFD\uFFFD\u0723\uFFFD\uFFFD\uFFFDSQL\uFFFD\uFFFD\u00BC
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-# 合并多个DruidDataSource的监控数据
+# \uFFFD\u03F2\uFFFD\uFFFD\uFFFD\uFFFDDruidDataSource\uFFFD\u013C\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 #spring.datasource.useGlobalDataSourceStat=true
 
-mybatis.mapper-locations=classpath:mapping/*.xml
+mybatis.mapper-locations=classpath*:mapping/*.xml
 mybatis.type-aliases-package=com.ucar.qtcassist.dao
 mybatis.config-locations=classpath:Mybatis-config.xml
 
-## 配置中心服务的地址
+## \uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0137\uFFFD\uFFFD\uFFFD\u0135\uFFFD\u05B7
 #spring.cloud.config.uri=localhost:8888
-## 要读取的配置文件application属性
+## \u04AA\uFFFD\uFFFD\u0221\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u013C\uFFFDapplication\uFFFD\uFFFD\uFFFD\uFFFD
 #spring.cloud.config.name=qtcassist
-## 要读取的配置文件profile属性,默认是dev
+## \u04AA\uFFFD\uFFFD\u0221\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u013C\uFFFDprofile\uFFFD\uFFFD\uFFFD\uFFFD,\u012C\uFFFD\uFFFD\uFFFD\uFFFDdev
 #spring.cloud.config.profile=dev
 
