修改配置文件

--- a/qtcassist/qtcassist-base/src/main/resources/application-test1.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application-test1.properties
@@ -5,7 +5,7 @@ spring.datasource.password=admin@123
 
 spring.redis.host=10.104.10.14
 spring.redis.port=6379
-#spring.redis.password=123456
+#0spring.redis.password=123456
 spring.redis.database=0
 spring.redis.pool.max-active=8
 spring.redis.pool.max-wait=-1
