--- a/qtcassist/pom.xml
+++ b/qtcassist/pom.xml
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.47</version>
+            <version>RELEASE</version>
         </dependency>
         <dependency>
             <groupId>com.taobao.metamorphosis</groupId>
