--- a/qtcassist/qtcassist-base/pom.xml
+++ b/qtcassist/qtcassist-base/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.11</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.ucar</groupId>
+            <artifactId>qtcassist-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
