--- a/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
@@ -13,7 +13,15 @@ spring.redis.pool.max-idle=500
 spring.redis.pool.min-idle=0
 spring.redis.timeout=0
 
-metaq.consumer.start-up=false
+metaq.consumer.start-up=true
+prism.url=http://prismtest.10101111.com/prism
+zkserver.url=10.104.107.222:5181
+
+#metaq.consumer.start-up=true
 
 #彩色日志
 spring.output.ansi.enabled=ALWAYS
+
+#openoffice
+openOffice.host=10.104.102.225
+openOffice.port=7009
