--- a/qtcassist/qtcassist-base/src/main/resources/application.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.port=8762
 spring.application.name=qtcassist
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka/
 management.security.enabled=false
+feign.hystrix.enabled: true
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
