--- a/qtcassist/qtcassist-api/pom.xml
+++ b/qtcassist/qtcassist-api/pom.xml
@@ -18,4 +18,18 @@
             <version>4.3.18.RELEASE</version>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>nexus</id>
+            <name>nexus repository for all Mirror.</name>
+            <url>http://maven.zuche.com/nexus/content/groups/public</url>
+            <uniqueVersion>true</uniqueVersion>
+        </repository>
+        <snapshotRepository>
+            <id>nexus</id>
+            <name>nexus repository for all Mirror.</name>
+            <url>http://maven.zuche.com/nexus/content/groups/public</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
