--- a/qtcassist/qtcassist-api/pom.xml
+++ b/qtcassist/qtcassist-api/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>spring-web</artifactId>
             <version>4.3.18.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
