课程服务接口

--- a/qtchome/qtchome-web/src/main/resources/application.yml
+++ b/qtchome/qtchome-web/src/main/resources/application.yml
@@ -1,7 +1,9 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8001/eureka/
+      defaultZone: http://10.103.14.221:8001/eureka/
+  instance:
+    prefer-ip-address: true
 security:
   basic:
     enabled: false
@@ -11,4 +13,4 @@ logging:
   level: debug
 spring:
   application:
-    name: front-end-service
+    name: api-home
