--- a/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:mysql://10.104.102.225/qtccloud
 spring.datasource.username=root
 spring.datasource.password=admin@123
 
+eureka.client.service-url.defaultZone=http://localhost:8001/eureka/
+
 spring.redis.host=10.104.10.14
 spring.redis.port=6379
 #spring.redis.password=123456
