--- a/qtcassist/qtcassist-base/src/main/resources/application-test1.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application-test1.properties
@@ -3,9 +3,11 @@ spring.datasource.url=jdbc:mysql://10.104.102.225/qtccloud
 spring.datasource.username=root
 spring.datasource.password=admin@123
 
+eureka.client.service-url.defaultZone=http://localhost:8001/eureka/
+
 spring.redis.host=10.104.10.14
 spring.redis.port=6379
-#0spring.redis.password=123456
+#spring.redis.password=123456
 spring.redis.database=0
 spring.redis.pool.max-active=8
 spring.redis.pool.max-wait=-1
@@ -13,7 +15,15 @@ spring.redis.pool.max-idle=500
 spring.redis.pool.min-idle=0
 spring.redis.timeout=0
 
-metaq.consumer.start-up=false
+metaq.consumer.start-up=true
+prism.url=http://prismtest.10101111.com/prism
+zkserver.url=10.104.107.222:5181
+
+#metaq.consumer.start-up=true
 
 #彩色日志
-spring.output.ansi.enabled=detect
+spring.output.ansi.enabled=ALWAYS
+
+#openoffice
+openOffice.host=10.104.102.225
+openOffice.port=7009
