--- a/qtccloud/qtccloud-base/src/main/resources/application.yml
+++ b/qtccloud/qtccloud-base/src/main/resources/application.yml
@@ -1,15 +1,5 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8001/eureka/
+## dev | prod | test
+
 spring:
-  application:
-    name: api-base
-  datasource:
-    url: jdbc:mysql://127.0.0.1:3306/qtccloud?useUnicode=true&characterEncoding=utf8
-    username: root
-    password: 123456
-mybatis:
-  mapper-locations: mapper/**Mapper.xml
-  configuration:
-      map-underscore-to-camel-case: true
+  profiles:
+    active: @environment@
