--- a/qtccloud/qtccloud-eureka/src/main/resources/application.yml
+++ b/qtccloud/qtccloud-eureka/src/main/resources/application.yml
@@ -1,11 +1,5 @@
-server:
-  port: 8001
+## dev | prod | test
 
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    registerWithEureka: false
-    fetchRegistry: false
-    serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+spring:
+  profiles:
+    active: @environment@
