--- a/qtccloud/qtccloud-zuul/src/main/resources/application.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application.yml
@@ -1,19 +1,5 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8001/eureka/
-server:
-  port: 8002
+## dev | prod | test
+
 spring:
-  application:
-    name: zuul
-  servlet:
-    multipart:
-      max-file-size: 100Mb
-      max-request-size: 100Mb
-ribbon:
-    ReadTimeout: 60000
-    ConnectTimeout: 60000
-
-
-
+  profiles:
+    active: @environment@
