--- a/qtcadmin/qtcadmin-view/package.json
+++ b/qtcadmin/qtcadmin-view/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@ucar/ucar-vue": "^1.3.5",
     "axios": "^0.18.0",
     "echarts": "^3.7.1",
     "element-ui": "^2.4.3",
