--- a/qtcadmin/qtcadmin-web/pom.xml
+++ b/qtcadmin/qtcadmin-web/pom.xml
@@ -24,6 +24,8 @@
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Edgware.RELEASE</spring-cloud.version>
 		<org.mapstruct.version>1.1.0.Final</org.mapstruct.version>
+		<!--插件mybatis generator-->
+		<mybatis.generator.version>1.3.2</mybatis.generator.version>
 	</properties>
 
 	<dependencies>
@@ -184,6 +186,11 @@
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>${mybatis.generator.version}</version>
 			</plugin>
 		</plugins>
 	</build>
