--- a/qtchome/qtchome-web/src/main/resources/application.yml
+++ b/qtchome/qtchome-web/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://10.103.14.221:8001/eureka/
+      defaultZone: http://localhost:8001/eureka/
   instance:
     prefer-ip-address: true
 security:
