--- a/qtccloud/qtccloud-eureka/src/main/resources/application-prod.yml
+++ b/qtccloud/qtccloud-eureka/src/main/resources/application-prod.yml
@@ -4,6 +4,11 @@ server:
 eureka:
   instance:
     hostname: 10.104.102.225
+
+  server:
+      enable-self-preservation: false
+      eviction-interval-timer-in-ms: 5000
+
   client:
     registerWithEureka: false
     fetchRegistry: false
