--- a/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
@@ -2,8 +2,10 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8001/eureka/
+
 server:
   port: 8002
+
 spring:
   application:
     name: zuul
@@ -11,9 +13,17 @@ spring:
     multipart:
       max-file-size: 100Mb
       max-request-size: 100Mb
+
 ribbon:
-    ReadTimeout: 60000
-    ConnectTimeout: 60000
+  ReadTimeout: 60000
+  ConnectTimeout: 60000
 
-
-
+hystrix:
+  command:
+    default:
+      execution:
+        timeout:
+          enabled: true
+        isolation:
+          thread:
+            timeoutInMilliseconds: 60000
