--- a/qtccloud/qtccloud-zuul/src/main/resources/application-prod.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-prod.yml
@@ -2,18 +2,29 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://10.104.102.225:8001/eureka/
+
 server:
   port: 8002
+
 spring:
   application:
     name: zuul
+
   servlet:
     multipart:
       max-file-size: 100Mb
       max-request-size: 100Mb
+
 ribbon:
-    ReadTimeout: 60000
-    ConnectTimeout: 60000
+  ReadTimeout: 10000
+  ConnectTimeout: 10000
 
-
-
+hystrix:
+  command:
+    default:
+      execution:
+        timeout:
+          enabled: true
+        isolation:
+          thread:
+            timeoutInMilliseconds: 5000
