--- a/qtchome/qtchome-web/src/main/resources/application.yml
+++ b/qtchome/qtchome-web/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 eureka:
   client:
+    registerWithEureka: true
+    fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8001/eureka/
   instance:
@@ -17,3 +19,6 @@ spring:
 ribbon:
    ReadTimeout: 60000
    ConnectTimeout: 30000
+
+
+
