configuration file commit

--- a/qtcassist/qtcassist-base/src/main/resources/application.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application.properties
@@ -7,6 +7,12 @@ management.security.enabled=false
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
+ribbon.ReadTimeout=60000
+ribbon.ConnectTimeout=30000
+
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+
 # 下面为连接池的补充设置，应用到上面所有数据源中
 # 初始化大小，最小，最大
 spring.datasource.initialSize=5
@@ -36,10 +42,9 @@ mybatis.mapperLocations=classpath*:mapping/*.xml
 mybatis.typeAliasesPackage=com.ucar.qtcassist.courseware.dao;com.ucar.qtcassist.course.dao;com.ucar.qtcassist.schedule.dao
 mybatis.configLocation=classpath:Mybatis-config.xml
 
-info.name=qtcassist
-info.groupId=@project.groupId@
-info.artifact=@project.artifactId@
-info.version=@project.version@
+info.groupId=@project.parent.groupId@
+info.artifact=@project.parent.artifactId@
+info.version=@project.parent.version@
 
 ## 配置中心服务的地址
 #spring.cloud.config.uri=http://localhost:8888
