--- a/qtcadmin/qtcadmin-view/package.json
+++ b/qtcadmin/qtcadmin-view/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "echarts": "^3.7.1",
     "element-ui": "^2.4.3",
+    "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.3",
     "lodash": "^4.17.4",
     "vue": "^2.5.2",
