--- a/qtcassist/qtcassist-api/pom.xml
+++ b/qtcassist/qtcassist-api/pom.xml
@@ -23,6 +23,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.49</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
