--- a/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.datasource.name=dev
-spring.datasource.url=jdbc:mysql://10.104.102.225/qtccloud
-spring.datasource.username=root
-spring.datasource.password=admin@123
+spring.datasource.url=jdbc:mysql://10.104.20.123/qtccloud
+spring.datasource.username=developer
+spring.datasource.password=developer1015
 
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka/
 
@@ -17,7 +17,7 @@ spring.redis.timeout=0
 
 metaq.consumer.start-up=false
 
-#彩色日志
+#\u5F69\u8272\u65E5\u5FD7
 spring.output.ansi.enabled=ALWAYS
 
 #openoffice
