--- a/qtccloud/qtccloud-base/src/main/resources/application-dev.yml
+++ b/qtccloud/qtccloud-base/src/main/resources/application-dev.yml
@@ -19,9 +19,9 @@ spring:
   application:
     name: api-base
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/qtccloud?useUnicode=true&characterEncoding=utf8
-    username: root
-    password: 123456
+    url: jdbc:mysql://10.104.20.123/qtccloud
+    username: developer
+    password: developer1015
 mybatis:
   mapper-locations: mapper/**Mapper.xml
   configuration:
