--- a/qtcadmin/qtcadmin-web/src/main/resources/application-test.yml
+++ b/qtcadmin/qtcadmin-web/src/main/resources/application-test.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://10.104.102.225:8001/eureka/
+      defaultZone: http://10.104.108.177:8001/eureka/
       healthcheck:
         enabled: true
     instance:
@@ -19,9 +19,9 @@ spring:
   application:
     name: api-admin
   datasource:
-    url: jdbc:mysql://10.104.102.225:3306/qtccloud?useUnicode=true&characterEncoding=utf8
-    username: root
-    password: admin@123
+    url: jdbc:mysql://10.104.20.123:3306/qtccloud?useUnicode=true&characterEncoding=utf8
+    username: developer
+    password: developer1015
   jackson:
     date-format: yyyy-MM-dd
     time-zone: GMT+8
@@ -39,4 +39,4 @@ ribbon:
 file:
   filePath: /file/uploaded_files/
   pre: /files
-  server: http://10.104.102.225:8004
+  server: http://10.104.108.177:8004
