--- a/qtccloud/qtccloud-base/src/main/resources/application-test.yml
+++ b/qtccloud/qtccloud-base/src/main/resources/application-test.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://10.104.102.225:8001/eureka/
+      defaultZone: http://10.104.108.177:8001/eureka/
       healthcheck:
         enabled: true
     instance:
@@ -19,9 +19,9 @@ spring:
   application:
     name: api-base
   datasource:
-    url: jdbc:mysql://10.104.102.225:3306/qtccloud?useUnicode=true&characterEncoding=utf8
-    username: root
-    password: admin@123
+    url: jdbc:mysql://10.104.20.123:3306/qtccloud?useUnicode=true&characterEncoding=utf8
+    username: developer
+    password: developer1015
 mybatis:
   mapper-locations: mapper/**Mapper.xml
   configuration:
