提交修改配置IP

--- a/qtccloud/qtccloud-zuul/src/main/resources/application-prod.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-prod.yml
@@ -1,10 +1,13 @@
+server:
+  port: 8002
+
 eureka:
   client:
     serviceUrl:
       defaultZone: http://10.104.108.177:8001/eureka/
-
-server:
-  port: 8002
+  instance:
+    prefer-ip-address: true
+    instance-id: 10.104.108.177:${server.port}
 
 spring:
   application:
