--- a/qtcadmin/qtcadmin-web/src/main/resources/application-dev.yml
+++ b/qtcadmin/qtcadmin-web/src/main/resources/application-dev.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8004
+
 eureka:
   client:
     serviceUrl:
@@ -7,13 +10,12 @@ eureka:
   instance:
     lease-renewal-interval-in-seconds: 10
     lease-expiration-duration-in-seconds: 30
+    prefer-ip-address: true
+    instance-id: 127.0.0.1:${server.port}
 
 security:
   basic:
     enabled: false
-
-server:
-  port: 8004
 
 spring:
   application:
