--- a/qtcadmin/qtcadmin-web/src/main/resources/application-prod.yml
+++ b/qtcadmin/qtcadmin-web/src/main/resources/application-prod.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8004
+
 eureka:
   client:
     serviceUrl:
@@ -7,13 +10,12 @@ eureka:
     instance:
       lease-renewal-interval-in-seconds: 10
       lease-expiration-duration-in-seconds: 30
+      prefer-ip-address: true
+      instance-id: 10.104.108.177:${server.port}
 
 security:
   basic:
     enabled: false
-
-server:
-  port: 8004
 
 spring:
   application:
