--- a/qtccloud/qtccloud-base/src/main/resources/application-dev.yml
+++ b/qtccloud/qtccloud-base/src/main/resources/application-dev.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8003
+
 eureka:
   client:
     serviceUrl:
@@ -7,13 +10,12 @@ eureka:
     instance:
       lease-renewal-interval-in-seconds: 10
       lease-expiration-duration-in-seconds: 20
+      prefer-ip-address: true
+      instance-id: 127.0.0.1:${server.port}
 
 security:
   basic:
     enabled: false
-
-server:
-  port: 8003
 
 spring:
   application:
