--- a/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
@@ -1,10 +1,13 @@
+server:
+  port: 8002
+
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8001/eureka/
-
-server:
-  port: 8002
+  instance:
+    prefer-ip-address: true
+    instance-id: 127.0.0.1:${server.port}
 
 spring:
   application:
