--- a/qtcadmin/qtcadmin-web/src/main/resources/application-dev.yml
+++ b/qtcadmin/qtcadmin-web/src/main/resources/application-dev.yml
@@ -4,14 +4,14 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://127.0.0.1:8001/eureka/
+      defaultZone: http://${spring.cloud.client.ipAddress}:8001/eureka/
     healthcheck:
       enabled: true
   instance:
     lease-renewal-interval-in-seconds: 10
     lease-expiration-duration-in-seconds: 30
     prefer-ip-address: true
-    instance-id: 127.0.0.1:${server.port}
+    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
 
 security:
   basic:
