--- a/qtccloud/qtccloud-eureka/src/main/resources/application-dev.yml
+++ b/qtccloud/qtccloud-eureka/src/main/resources/application-dev.yml
@@ -3,7 +3,7 @@ server:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: ${spring.cloud.client.ipAddress}
 
   server:
       enable-self-preservation: false
