--- a/qtcadmin/qtcadmin-web/pom.xml
+++ b/qtcadmin/qtcadmin-web/pom.xml
@@ -81,6 +81,12 @@
         </dependency>
 
 		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-core</artifactId>
 			<version>1.3.2</version>
