--- a/qtcassist/qtcassist-schedule/pom.xml
+++ b/qtcassist/qtcassist-schedule/pom.xml
@@ -43,6 +43,13 @@
                 <configuration>
                     <mainClass>com.ucar.qtcassist.QtcassistApplication</mainClass>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
