课件接口 修改

--- a/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
@@ -15,7 +15,7 @@ spring.redis.pool.max-idle=500
 spring.redis.pool.min-idle=0
 spring.redis.timeout=0
 
-metaq.consumer.start-up=false
+metaq.consumer.start-up=true
 
 #彩色日志
 spring.output.ansi.enabled=ALWAYS
