修改配置文件缩进

--- a/qtcassist/qtcassist-base/src/main/resources/application-test2.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application-test2.properties
@@ -18,7 +18,7 @@ spring.redis.timeout=0
 metaq.consumer.start-up=true
 
 #彩色日志
-spring.output.ansi.enabled=ALWAYS
+spring.output.ansi.enabled=detect
 
 #openoffice
 openOffice.host=10.104.102.225
