升级cloud版本，修改zuul网关超时

--- a/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
@@ -23,7 +23,9 @@ spring:
 
 zuul:
   ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
-#  ignoredServices: "*"
+  host:
+    socket-timeout-millis: 60000
+    connect-timeout-millis: 60000
 
 ribbon:
   ReadTimeout: 60000
