--- a/qtccloud/qtccloud-zuul/src/main/resources/application-test.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-test.yml
@@ -25,6 +25,9 @@ spring:
 
 zuul:
   ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
+  host:
+    socket-timeout-millis: 60000
+    connect-timeout-millis: 60000
 
 ribbon:
   ReadTimeout: 60000
