重命名启动类

--- a/qtcassist/qtcassist-schedule/pom.xml
+++ b/qtcassist/qtcassist-schedule/pom.xml
@@ -40,7 +40,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.ucar.qtcassist.QtcassistApplication</mainClass>
+                    <mainClass>com.ucar.qtcassist.QtcassistScheduleApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
