--- a/qtchome/qtchome-web/src/main/resources/application-dev.yml
+++ b/qtchome/qtchome-web/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://10.103.13.217:8001/eureka/
+      defaultZone: http://${spring.cloud.client.ipAddress}:8001/eureka/
     healthcheck:
       enabled: true
   instance:
