配置文件更新

--- a/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application-dev.properties
@@ -4,6 +4,7 @@ spring.datasource.username=developer
 spring.datasource.password=developer1015
 
 eureka.client.service-url.defaultZone=http://${spring.cloud.client.ipAddress}:8001/eureka/
+eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 
 spring.redis.host=10.104.10.14
 spring.redis.port=6379
