--- a/qtchome/qtchome-web/src/main/resources/application-dev.yml
+++ b/qtchome/qtchome-web/src/main/resources/application-dev.yml
@@ -11,7 +11,7 @@ eureka:
     lease-renewal-interval-in-seconds: 10
     lease-expiration-duration-in-seconds: 20
     prefer-ip-address: true
-    instance-id: 10.103.13.217:${server.port}
+    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
 
 security:
   basic:
