--- a/qtcadmin/qtcadmin-web/src/main/resources/application-prod.yml
+++ b/qtcadmin/qtcadmin-web/src/main/resources/application-prod.yml
@@ -53,3 +53,12 @@ logging:
 ribbon:
   eureka:
     enable: true
+
+swagger:
+  base-package: com.ucar.qtc.admin.controller
+  globalOperationParameters[0]:
+    name: Authorization
+    description: JWT TOKEN
+    modelRef: string
+    parameterType: header
+    required: false
