--- a/qtccloud/qtccloud-base/pom.xml
+++ b/qtccloud/qtccloud-base/pom.xml
@@ -69,6 +69,12 @@
             <version>RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.spring4all</groupId>
+            <artifactId>swagger-spring-boot-starter</artifactId>
+            <version>1.7.0.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
