--- a/qtccloud/qtccloud-base/src/main/resources/application-test.yml
+++ b/qtccloud/qtccloud-base/src/main/resources/application-test.yml
@@ -38,3 +38,6 @@ file:
   filePath: /file/uploaded_files/
   pre: /files
   server: http://10.104.108.177:8003
+
+swagger:
+  base-package: com.ucar.qtc.base.controller
