--- a/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
@@ -4,14 +4,14 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://${spring.cloud.client.ipAddress}:8001/eureka/
+      defaultZone: http://${spring.cloud.client.ip-address}:8001/eureka/
     healthcheck:
       enabled: true
   instance:
     lease-renewal-interval-in-seconds: 10
     lease-expiration-duration-in-seconds: 20
     prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
 
 spring:
   application:
