--- a/qtchome/qtchome-web/src/main/resources/application-dev.yml
+++ b/qtchome/qtchome-web/src/main/resources/application-dev.yml
@@ -4,21 +4,22 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://${spring.cloud.client.ipAddress}:8001/eureka/
+      defaultZone: http://${spring.cloud.client.ip-address}:8001/eureka/
     healthcheck:
       enabled: true
   instance:
     lease-renewal-interval-in-seconds: 10
     lease-expiration-duration-in-seconds: 20
     prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
 
 security:
   basic:
     enabled: false
 
 logging:
-  level: debug
+  level:
+    root: INFO
 
 spring:
   application:
