升级springboot和springcloud版本

--- a/qtcassist/qtcassist-base/src/main/resources/application.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application.properties
@@ -2,14 +2,12 @@ spring.profiles.active=dev
 
 server.port=8005
 spring.application.name=qtcassist
-management.security.enabled=false
+management.endpoints.web.exposure.include = *
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 ribbon.eureka.enabled=true
-ribbon.ReadTimeout=60000
-ribbon.ConnectTimeout=30000
 
 #开启健康检查（需要spring-boot-starter-actuator依赖）
 eureka.client.healthcheck.enabled=true
