--- a/qtcassist/qtcassist-base/src/main/resources/application-test1.properties
+++ b/qtcassist/qtcassist-base/src/main/resources/application-test1.properties
@@ -9,13 +9,9 @@ spring.redis.host=10.104.10.14
 spring.redis.port=6379
 #spring.redis.password=123456
 spring.redis.database=0
-spring.redis.pool.max-active=8
-spring.redis.pool.max-wait=-1
-spring.redis.pool.max-idle=500
-spring.redis.pool.min-idle=0
-spring.redis.timeout=0
+spring.redis.timeout=PT0S
 
-metaq.consumer.start-up=true
+metaq.consumer.start-up=false
 
 #彩色日志
 spring.output.ansi.enabled=ALWAYS
