修改课件添加流程

--- a/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
@@ -42,3 +42,8 @@ hystrix:
         isolation:
           thread:
             timeoutInMilliseconds: 60000
+
+
+multipart:
+   maxFileSize: 50Mb
+   maxRequestSize: 50Mb
