--- a/qtccloud/qtccloud-zuul/src/main/resources/application-test.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-test.yml
@@ -24,14 +24,14 @@ spring:
       max-request-size: 100Mb
 
   redis:
-      hostName: 10.104.108.177
-      port: 6379
-      jedis:
-        pool:
-          maxActive: 1024
-          maxWait: 1000
-          maxIdle: 200
-      timeout: 10000
+    host: 10.104.108.177
+    port: 6379
+    jedis:
+      pool:
+        max-active: 1024
+        max-wait: -1s
+        max-idle: 200
+    timeout: 500s
 
 zuul:
   ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
