--- a/qtcadmin/qtcadmin-web/src/main/resources/application-dev.yml
+++ b/qtcadmin/qtcadmin-web/src/main/resources/application-dev.yml
@@ -27,14 +27,14 @@ spring:
     date-format: yyyy-MM-dd
     time-zone: GMT+8
   redis:
-      hostName: 127.0.0.1
-      port: 6379
-      jedis:
-        pool:
-          maxActive: 1024
-          maxWait: 1000
-          maxIdle: 200
-      timeout: 10000
+    host: 127.0.0.1
+    port: 6379
+    jedis:
+      pool:
+        max-active: 1024
+        max-wait: -1s
+        max-idle: 200
+    timeout: 500s
 
 jdbc:
   datasource:
