--- a/qtcadmin/qtcadmin-web/src/main/resources/application-test.yml
+++ b/qtcadmin/qtcadmin-web/src/main/resources/application-test.yml
@@ -28,14 +28,14 @@ spring:
     time-zone: GMT+8
 
   redis:
-      hostName: 10.104.108.177
-      port: 6379
-      jedis:
-        pool:
-          maxActive: 1024
-          maxWait: 1000
-          maxIdle: 200
-      timeout: 10000
+    host: 10.104.108.177
+    port: 6379
+    jedis:
+      pool:
+        max-active: 1024
+        max-wait: -1s
+        max-idle: 200
+    timeout: 500s
 
 jdbc:
   datasource:
