修改token设置时间

--- a/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
@@ -12,6 +12,8 @@ eureka:
     lease-expiration-duration-in-seconds: 20
     prefer-ip-address: true
     instance-id: ${spring.cloud.client.ip-address}:${server.port}
+cache:
+  time: 5
 
 spring:
   application:
