上传封面控制图片类型

--- a/test/src/main/resources/application-test1.properties
+++ b/test/src/main/resources/application-test1.properties
@@ -5,13 +5,9 @@ spring.datasource.password=admin@123
 
 spring.redis.host=10.104.10.14
 spring.redis.port=6379
-#0spring.redis.password=123456
+#spring.redis.password=123456
 spring.redis.database=0
-spring.redis.pool.max-active=8
-spring.redis.pool.max-wait=-1
-spring.redis.pool.max-idle=500
-spring.redis.pool.min-idle=0
-spring.redis.timeout=0
+spring.redis.timeout=PT0S
 
 metaq.consumer.start-up=false
 
