--- a/test/src/main/resources/application-dev.properties
+++ b/test/src/main/resources/application-dev.properties
@@ -7,11 +7,7 @@ spring.redis.host=10.104.10.14
 spring.redis.port=6379
 #spring.redis.password=123456
 spring.redis.database=0
-spring.redis.pool.max-active=8
-spring.redis.pool.max-wait=-1
-spring.redis.pool.max-idle=500
-spring.redis.pool.min-idle=0
-spring.redis.timeout=0
+spring.redis.timeout=PT0S
 
 metaq.consumer.start-up=false
 
