--- a/qtchome/qtchome-web/src/main/resources/application-dev.yml
+++ b/qtchome/qtchome-web/src/main/resources/application-dev.yml
@@ -13,13 +13,11 @@ eureka:
     prefer-ip-address: true
     instance-id: ${spring.cloud.client.ip-address}:${server.port}
 
-security:
-  basic:
-    enabled: false
-
-logging:
-  level:
-    root: INFO
+management:
+  endpoints:
+    web:
+      exposure:
+        include: *
 
 spring:
   application:
