--- a/qtchome/qtchome-web/src/main/resources/application-test.yml
+++ b/qtchome/qtchome-web/src/main/resources/application-test.yml
@@ -14,13 +14,11 @@ eureka:
     prefer-ip-address: true
     instance-id: 10.104.108.177:${server.port}
 
-security:
-  basic:
-    enabled: false
-
-logging:
-  level:
-    root: INFO
+management:
+  endpoints:
+    web:
+      exposure:
+        include: *
 
 spring:
   application:
