去除无用的配置 新增几个eureka配置

--- a/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-dev.yml
@@ -32,14 +32,12 @@ spring:
     timeout: 500s
 
 zuul:
-  ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
+#  ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
   host:
     socket-timeout-millis: 60000
     connect-timeout-millis: 60000
 
 ribbon:
-  ReadTimeout: 60000
-  ConnectTimeout: 30000
   eureka:
     enabled: true
 
