--- a/qtchome/qtchome-web/src/main/resources/application-dev.yml
+++ b/qtchome/qtchome-web/src/main/resources/application-dev.yml
@@ -17,14 +17,9 @@ management:
   endpoints:
     web:
       exposure:
-        include: *
+        include: '*'
 
 spring:
   application:
     name: api-home
 
-ribbon:
-   ReadTimeout: 60000
-   ConnectTimeout: 30000
-   eureka:
-     enabled: true
