新增几个eureka配置

--- a/qtccloud/qtccloud-zuul/src/main/resources/application-test.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-test.yml
@@ -5,9 +5,9 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://10.104.108.177:8001/eureka/
+    registry-fetch-interval-seconds: 15
     healthcheck:
       enabled: true
-
   instance:
     lease-renewal-interval-in-seconds: 10
     lease-expiration-duration-in-seconds: 20
