--- a/qtccloud/qtccloud-base/src/main/resources/application-dev.yml
+++ b/qtccloud/qtccloud-base/src/main/resources/application-dev.yml
@@ -5,6 +5,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${spring.cloud.client.ip-address}:8001/eureka/
+    registry-fetch-interval-seconds: 15
     healthcheck:
       enabled: true
   instance:
@@ -13,9 +14,11 @@ eureka:
     prefer-ip-address: true
     instance-id: ${spring.cloud.client.ip-address}:${server.port}
 
-security:
-  basic:
-    enabled: false
+management:
+  endpoints:
+      web:
+        exposure:
+          include: '*'
 
 spring:
   application:
