--- a/qtccloud/qtccloud-zuul/src/main/resources/application-prod.yml
+++ b/qtccloud/qtccloud-zuul/src/main/resources/application-prod.yml
@@ -5,6 +5,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://10.104.108.177:8001/eureka/
+    registry-fetch-interval-seconds: 15
     healthcheck:
       enabled: true
   instance:
