--- a/qtchome/qtchome-web/src/main/resources/application-dev.yml
+++ b/qtchome/qtchome-web/src/main/resources/application-dev.yml
@@ -5,6 +5,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${spring.cloud.client.ip-address}:8001/eureka/
+    registry-fetch-interval-seconds: 15
     healthcheck:
       enabled: true
   instance:
