--- a/test/src/main/resources/application.properties
+++ b/test/src/main/resources/application.properties
@@ -3,15 +3,18 @@ spring.profiles.active=dev
 server.port=8763
 spring.application.name=test
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka/
-management.security.enabled=false
 feign.hystrix.enabled=false
+
+management.endpoints.web.exposure.include = *
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
-ribbon.eureka.enabled=true
-ribbon.ReadTimeout=60000
-ribbon.ConnectTimeout=30000
+#开启健康检查（需要spring-boot-starter-actuator依赖）
+eureka.client.healthcheck.enabled=true
+eureka.client.registry-fetch-interval-seconds=15
+eureka.instance.lease-renewal-interval-in-seconds=10
+eureka.instance.lease-expiration-duration-in-seconds=20
 
 mybatis.mapperLocations=classpath*:mapping/*.xml
 mybatis.typeAliasesPackage=com.ucar.test.dao
