修改添加课件页面

--- a/qtcadmin/qtcadmin-web/src/main/resources/application-dev.yml
+++ b/qtcadmin/qtcadmin-web/src/main/resources/application-dev.yml
@@ -56,7 +56,7 @@ jdbc:
     filters: stat,wall,slf4j
 
 mybatis:
-  mapper-locations: mapper/**Mapper.xml
+  mapper-locations: classpath*:mapper/*.xml
   configuration:
       map-underscore-to-camel-case: true
 
