--- a/qtchome/qtchome-web/src/main/resources/application-dev.yml
+++ b/qtchome/qtchome-web/src/main/resources/application-dev.yml
@@ -23,6 +23,10 @@ management:
 spring:
   application:
     name: api-home
+  servlet:
+      multipart:
+        max-file-size: 100Mb
+        max-request-size: 100Mb
 
 ribbon:
   ReadTimeout: 60000
